[gd_scene format=3 uid="uid://dra85yrala56h"]

[ext_resource type="Script" uid="uid://b2tgekh5vlcqg" path="res://scripts/ui/supplies.gd" id="1_mcq1b"]
[ext_resource type="PackedScene" uid="uid://bfptgb3o7ippw" path="res://scenes/ui/ui_level_result.tscn" id="2_1t7f6"]
[ext_resource type="Texture2D" uid="uid://bh04disds0rdx" path="res://assets/sprites/berries-icon.png" id="2_1xjb1"]
[ext_resource type="Texture2D" uid="uid://buv63e2uuvl6i" path="res://assets/sprites/wood-icon.png" id="3_86o5r"]
[ext_resource type="PackedScene" uid="uid://dkyefmi6y80sr" path="res://scenes/ui/ui_night_timer.tscn" id="5_86o5r"]
[ext_resource type="PackedScene" uid="uid://cinellujdmr1f" path="res://scenes/ui/ui_night_start.tscn" id="6_jlxqg"]
[ext_resource type="PackedScene" uid="uid://cpausemenu001" path="res://scenes/ui/pause_menu.tscn" id="7_pause"]

[node name="HUD" type="CanvasLayer" unique_id=1086987246]

[node name="DebugNotes" type="TextEdit" parent="." unique_id=1975662159]
visible = false
offset_right = 472.0
offset_bottom = 218.0
text = "Levym - vyberes unit
Pravym - posles nekam

nejde od-oznacit (smolik pacholik, nevim jak)

co treba znovu levym do prazdna?
co treba prostredni mysitko?"

[node name="Resources" type="MarginContainer" parent="." unique_id=1585327082]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -267.0
offset_bottom = 150.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_mcq1b")

[node name="ColorRect" type="ColorRect" parent="Resources" unique_id=1130502398]
layout_mode = 2
color = Color(0.11, 0.11, 0.11, 0.6509804)

[node name="MarginContainer" type="MarginContainer" parent="Resources" unique_id=953289195]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Resources/MarginContainer" unique_id=1644340481]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HFlowContainer" type="HFlowContainer" parent="Resources/MarginContainer/VBoxContainer" unique_id=1294708245]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer" unique_id=248542349]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Collected resources"
uppercase = true

[node name="VFlowContainer" type="VFlowContainer" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer" unique_id=75710960]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer/VFlowContainer" unique_id=451522407]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="BerriesContainer" type="HBoxContainer" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer/VFlowContainer/HFlowContainer" unique_id=252912449]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer/VFlowContainer/HFlowContainer/BerriesContainer" unique_id=581393986]
layout_mode = 2
texture = ExtResource("2_1xjb1")

[node name="BerriesCount" type="Label" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer/VFlowContainer/HFlowContainer/BerriesContainer" unique_id=171881345]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 18
text = "0"

[node name="WoodContainer" type="HBoxContainer" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer/VFlowContainer/HFlowContainer" unique_id=2077439187]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer/VFlowContainer/HFlowContainer/WoodContainer" unique_id=1530481643]
layout_mode = 2
texture = ExtResource("3_86o5r")

[node name="WoodCount" type="Label" parent="Resources/MarginContainer/VBoxContainer/HFlowContainer/VFlowContainer/HFlowContainer/WoodContainer" unique_id=681554321]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 18
text = "0"

[node name="VBox" type="VBoxContainer" parent="Resources/MarginContainer/VBoxContainer" unique_id=1897118050]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Resources/MarginContainer/VBoxContainer/VBox" unique_id=894652136]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Kakapos"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBox" type="HBoxContainer" parent="Resources/MarginContainer/VBoxContainer/VBox" unique_id=45994449]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="KakaposLabel" type="Label" parent="Resources/MarginContainer/VBoxContainer/VBox/HBox" unique_id=1170026009]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 18
text = "Lost:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LostCount" type="Label" parent="Resources/MarginContainer/VBoxContainer/VBox/HBox" unique_id=2010816853]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 18
text = "0"

[node name="LevelResult" parent="." unique_id=304357917 instance=ExtResource("2_1t7f6")]
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = -300.0
offset_bottom = -73.0
grow_vertical = 1

[node name="NightTimer" parent="." unique_id=452082066 instance=ExtResource("5_86o5r")]

[node name="NightStart" parent="." unique_id=895866998 instance=ExtResource("6_jlxqg")]
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -147.5
offset_top = -300.0
offset_right = 147.5
offset_bottom = -72.99988
grow_vertical = 1

[node name="PauseMenu" parent="." instance=ExtResource("7_pause")]
